k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realworld-api
  namespace: realworld
  labels:
    app: realworld-api
spec:
  type: ClusterIP
  selector:
    app: realworld-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
